02 - pridni readme a ignor

--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="css/bootstrap.min.css" rel="stylesheet"
-  <head>
    
 </head>
 
 <body>
-  <header class="bg-info">
-    <h1>FilmWeb</h1>
+  <header class="bg-info p-5">
+    <h1 class="text-cemter text-white">FilmWeb</h1>
   </header>
   <main>
 
   </main>
   <footer>
-    <!-- place footer here -->
+    <p>Copyright 2023 - Lubenik Miroslav</p>
   </footer>
  
 
