--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS v5.2.1 -->
-  <link href="css/bootstrap.min.css" rel="stylesheet"
-   
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/my.css" rel="stylesheet">
 </head>
 
 <body>
@@ -51,21 +51,21 @@
    </ol>
    <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-     <img src="holder.js/900x500/auto/#777:#555/text:First slide" class="w-100 d-block" alt="First slide">
+     <img src="https://picsum.photos/id/69/900/300" class="w-100 d-block" alt="First slide">
      <div class="carousel-caption d-none d-md-block">
       <h3>Title</h3>
       <p>Description</p>
      </div>
     </div>
     <div class="carousel-item">
-     <img src="holder.js/900x500/auto/#666:#444/text:Second slide" class="w-100 d-block" alt="Second slide">
+     <img src="https://picsum.photos/id/1/900/300" class="w-100 d-block" alt="Second slide">
      <div class="carousel-caption d-none d-md-block">
       <h3>Title</h3>
       <p>Description</p>
      </div>
     </div>
     <div class="carousel-item">
-     <img src="holder.js/900x500/auto/#666:#444/text:Third slide" class="w-100 d-block" alt="Third slide">
+     <img src="https://picsum.photos/id/13/900/300" class="w-100 d-block" alt="Third slide">
      <div class="carousel-caption d-none d-md-block">
       <h3>Title</h3>
       <p>Description</p>
